fix display tab wraping on mobile

--- a/src/css/style.less
+++ b/src/css/style.less
@@ -54,7 +54,11 @@ nav{
 }
 
 .nav-tabs {
-	.nav-item {
+
+	li {
+		width: 33.33%;
+		white-space: nowrap;
+
 		&:hover{
 			color: rgb(189, 189, 189);
 		}
